Redirecting after charge then showing order from database

--- a/views/chargeform.erb
+++ b/views/chargeform.erb
@@ -19,6 +19,9 @@
           </div>
         </div>
       </div>
+
+      
+
   </div>
 
   <div data-bind="visible: total() > 0">
@@ -281,11 +284,11 @@
     width: 140px;
     height: 40px;
     position: fixed;
-    bottom: 1%;
+    top: 5px;
     right: 2%;
     display: none;
     color: #FFF !important;
-    background-color: #1B2125;
+    background-color: #67dbb2;
     border-radius: 21px;
     border-bottom: 3px solid #939393;
     text-decoration: none;
