--- a/views/venue/edit.erb
+++ b/views/venue/edit.erb
@@ -30,6 +30,13 @@
         </div>
       </div>
 
+      <div class='control-group'> 
+        <label class='control-label' for='printer_id'>Printer ID</label>
+        <div class='controls'>
+          <input type='text' id='printer_id' name='printer_id' placeholder="24 digit alphanumeric code" value='<%= @venue.printer_id %>'>
+        </div>
+      </div>
+
       <hr>
 
       <div class='control-group'> 
