--- a/views/orders/index.erb
+++ b/views/orders/index.erb
@@ -1,5 +1,5 @@
 <div id='content'>
-	<h3>Austin's Orders</h3><hr>
+	<h3>Orders</h3><hr>
 		<% @orders.each do |order| %>
   				
     	<h5><%= order.venue %> at <%= order.location %></h5>
