--- a/views/order.erb
+++ b/views/order.erb
@@ -5,17 +5,19 @@
   <%= @venue.address %>
 </div>
 
-<div class="row-fluid" style="background: #baddd9; color: #555555">
-  <div style="padding:10px;" class="span12">
-    <h1>Order <%= @order.id %></h1>
-    <h4>$<%= (@charge[:amount] / 100) %> on <%= @charge[:card][:type] %> <%= @charge[:card][:last4] %> at <%= (@order.created_at - 21600).strftime("%I:%M%P") %></h4>
+<div class="order">
+  <div class="row-fluid">
+    <div style="padding:10px;" class="span12">
+      <h1>Order <%= @order.id %></h1>
+      <h4>$<%= (@charge[:amount] / 100) %> on <%= @charge[:card][:type] %> <%= @charge[:card][:last4] %> at <%= (@order.created_at - 21600).strftime("%I:%M%P") %></h4>
 
-    <ul style="font-size: 150%; list-style-type: none;">
-      <% @items.each do |item| %>
-        <li><h4><%= item.quantity %> &times; <%= item.item %></h4></li>
-      <% end %>
-    </ul>
+      <ul style="font-size: 150%; list-style-type: none;">
+        <% @items.each do |item| %>
+          <li><h4><%= item.quantity %> &times; <%= item.item %></h4></li>
+        <% end %>
+      </ul>
 
+    </div>
   </div>
 </div>
 
@@ -31,3 +33,13 @@
 </script>
 
 </div>
+
+<style type="text/css">
+
+  .order {
+  background: #baddd9;
+  border-radius: 2px;
+  border: 1px solid #9bbeba;
+  }
+
+</style>
