Have absolute positioning for checkout box in desktop mode

--- a/views/chargeform.erb
+++ b/views/chargeform.erb
@@ -280,7 +280,6 @@
   color: #F00;
   border: 1px #F00 solid;
   padding: 5px;
-  margin-top: 10px;
 }
 
 .payment article h3{
@@ -310,5 +309,16 @@
     text-decoration: none;
     text-indent: 7px;
     line-height: 40px;
+}
+
+@media (min-width: 768px) {
+  .checkout {
+    width: 20%;
+    min-width: 300px;
+    position: fixed;
+    top: 150px; 
+    left: 60%; 
+    z-index: 100;
+  }
 }
 </style>
