--- a/views/orders/index.erb
+++ b/views/orders/index.erb
@@ -1,20 +1,16 @@
 <div id='content'>
 	<h3>Orders</h3><hr>
 		<% @orders.each do |order| %>
-  				
-    	<h5><%= order.venue %> at <%= order.location %></h5>
-    	<h4><%= order.drinks_1 %></h4>
-      <h4><%= order.drinks_2 %></h4>
-      <h4><%= order.drinks_3 %></h4>
-      <h4><%= order.drinks_4 %></h4>
-    	<p>by <%= order.firstname %> <%= ' | <i class="icon-eye-open"></i>' unless order.received_at.nil? %> <%= '<i class="icon-glass"></i>' unless order.fulfilled_at.nil? %></p>
-    	<hr>
+      <h3>Order <%= order.id %></h3>
+      <h4>@venue.name</h4>
+      <% end %>
+    <hr>
   	<% end %>
 		
 <script>
   $(document).ready(function() {
   	setTimeout(function() {
-    	$('#content').load('/');}, 10000);
+    	$('#content').load('/<%= @venue.handle %>/orders');}, 10000);
   });
 </script>
 </div>
