Re-hid form inputs

--- a/views/chargeform.erb
+++ b/views/chargeform.erb
@@ -52,9 +52,9 @@
           </div>
         </div>
         <form action="/charge" method="post" class="payment" data-bind="visible: total() > 0">
-          <input name="venue" type="text" value="<%= @venue.id %>" />
-          <input name="order" type="text" data-bind="value: order()" />
-          <input name="amount" type="text" data-bind="value: total()" />
+          <input name="venue" type="hidden" value="<%= @venue.id %>" />
+          <input name="order" type="hidden" data-bind="value: order()" />
+          <input name="amount" type="hidden" data-bind="value: total()" />
 
           <article>
             <h4 data-bind="visible: total() > 0">
