--- a/views/venue/hours/edit.erb
+++ b/views/venue/hours/edit.erb
@@ -5,49 +5,43 @@
 
     
 
-    <h4>Set Hours</h4>
+    <h4>Edit Hours of Operation</h4>
     <form action='/admin/venue/hours/edit' method='post' class='form-horizontal'>
+      <input type="hidden" name="_method" value="PUT" />
       <input type='hidden' name='venue_id' value='<%= @venue.id %>'>
       <div class='control-group'>
-      <% (0..6).each do |day| %>
-        <label class='control-label' for='<%= @day_of_week[day] %>'><%= @day_of_week[day] %></label>
+      <% @time.each do |x| %>
+        <% start_hour = x.start_hour %>
+        <% end_hour = x.end_hour %>
+
+        <% x.start_hour > 12 ? start_meridian = "pm" : start_meridian = "am" %>
+        <% start_meridian == "pm" ? start_hour -= 12 : start_hour = x.start_hour %>
+        
+        <% x.end_hour > 12 ? end_meridian = "pm" : end_meridian = "am" %>
+        <% end_meridian == "pm" ? end_hour -= 12 : end_hour = x.end_hour %>
+
+        <input type='hidden' name='id' value='<%= x.id %>'>
+        <label class='control-label' for='<%= x.id %>'><%= @day_of_week[x.day_of_week] %></label>
         <div class='controls controls-row'>
-          <select type='text' id='<%= @day_of_week[day] %>' name='<%= day %>_start_hour' class='span1'>
-            <option>1</option>
-            <option>2</option>
-            <option>3</option>
-            <option>4</option>
-            <option>5</option>
-            <option>6</option>
-            <option>7</option>
-            <option>8</option>
-            <option>9</option>
-            <option>10</option>
-            <option>11</option>
-            <option>12</option>
+
+          <select type='text' id='<%= x.id %>' name='<%= x.id %>_start_hour' class='span1' value='x.start_hour'>
+            <% (1..12).each do |hour| %>
+              <option <%= start_hour == hour ? "selected" : "" %>><%= hour %></option>
+            <% end %>
           </select>
 
-          <select type='text' id='<%= @day_of_week[day] %>' name='<%= day %>_start_meridian' class='span1'>
+          <select type='text' id='<%= x.id %>' name='<%= x.id %>_start_meridian' class='span1'>
             <option>am</option>
             <option>pm</option>
           </select>
 
-          <select type='text' id='<%= @day_of_week[day] %>' name='<%= day %>_end_hour' class='span1'>
-            <option>1</option>
-            <option>2</option>
-            <option>3</option>
-            <option>4</option>
-            <option>5</option>
-            <option>6</option>
-            <option>7</option>
-            <option>8</option>
-            <option>9</option>
-            <option>10</option>
-            <option>11</option>
-            <option>12</option>
+          <select type='text' id='<%= x.id %>' name='<%= x.id %>_end_hour' class='span1'>
+            <% (1..12).each do |hour| %>
+              <option <%= end_hour == hour ? "selected" : "" %>><%= hour %></option>
+            <% end %>
           </select>
 
-          <select type='text' id='<%= @day_of_week[day] %>' name='<%= day %>_end_meridian' class='span1'>
+          <select type='text' id='<%= x.id %>' name='<%= x.id %>_end_meridian' class='span1'>
             <option>pm</option>
             <option>am</option>
           </select>
