Got rid of duplicate charge.rb and am currently working on returning response print id.

--- a/views/order.erb
+++ b/views/order.erb
@@ -22,7 +22,7 @@
 </div>
 
 <div class="alert alert-warning" style="margin-top: 10px">
-  In roughly 20 minutes, <b>politely</b> make your way to the front of the line with your order number and email address you ordered with
+  <%= @print_id %>
 </div>
 
 <script>
