Finally have print id displaying to terminal as well as erb view

--- a/views/order.erb
+++ b/views/order.erb
@@ -22,7 +22,7 @@
 </div>
 
 <div class="alert alert-warning" style="margin-top: 10px">
-  <%= @print_id %>
+  <%= session[:print_response] %>
 </div>
 
 <script>
