Parsing the print response properly. Displaying the body to the terminal and the print id to the order view. Next step is to write the print id to the db and make the print callback to mprinter.

--- a/views/order.erb
+++ b/views/order.erb
@@ -22,7 +22,7 @@
 </div>
 
 <div class="alert alert-warning" style="margin-top: 10px">
-  <%= session[:print_response] %>
+  <%= session[:print_id] %>
 </div>
 
 <script>
